fixed some overlap issues in CSS for both Header and Portfolio for Mac screen as well as 500px media screen

--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,5 +1,5 @@
 header {
-    height: 65vh;
+    height: 70vh;
     padding-top: 7rem;
     overflow: hidden;
 }
